# zed

./: Cargo.toml  rust-toolchain.toml
crates/gpui/src/: app.rs
crates/gpui_ios/: Cargo.toml  build.rs
crates/gpui_ios/src/: dispatcher.rs  display.rs  events.rs  gpui_ios.rs  keyboard.rs  metal_renderer.rs  platform.rs  text_system.rs  window.rs
crates/gpui_platform/: Cargo.toml
crates/gpui_platform/src/: gpui_platform.rs
crates/zed-ios/: Cargo.toml
crates/zed-ios/src/: lib.rs
