[package]
name = "gpui_ios"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_ios.rs"

[features]
default = []
# Use runtime Metal shader compilation (device.newLibraryWithSource) instead of
# pre-compiled .metallib. Required for Phase 1 since the iOS shader compilation
# build pipeline isn't set up yet.
runtime_shaders = []
test-support = ["gpui/test-support"]

[dependencies]
gpui.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
anyhow.workspace = true
async-task = "4.7"
block = "0.1"
collections.workspace = true
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-graphics = "0.24"
core-text = "21"
dispatch2 = "0.3.1"
etagere = "0.2"
futures.workspace = true
libc.workspace = true
log.workspace = true
metal.workspace = true
objc.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
util.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "ios")'.build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }
gpui.workspace = true
